--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,9 +23,10 @@
 div.field_with_errors {
   display: contents;
 
-  input {
-    border: 2px solid red;
-  }
+   input,
+   textarea {
+     @extend .is-invalid;
+   }
 }
 // 共通
 .base-container {
